--- a/frontend/ToDo.txt
+++ b/frontend/ToDo.txt
@@ -1,9 +1,6 @@
  Все блоки и элементы из макета сверстаны. Размеры и расположение не отличаются от макета на более, чем на 30px на десктопной версии и на 10px на остальных размерах экрана, для которых подготовлен макет. Отличия в размерах не должны визуально противоречить макету и выбиваться из заложенной в макет сетки, в этом случае требуется более строгое соответствие размерам макета.
 
-    Цвет header в роуте /главнаяСтраница
-    При переполнении отображение не должно искажаться https://disk.yandex.com/i/hukxB4yH7yygRQ
-    При открытом мобильном меню фон имеет затемнение
-    В мобильном меню в ссылке Аккаунт отображение отличается от макета https://disk.yandex.com/i/wicQSoekvwz_nQ
+
     На 1280px не по макету:
     https://disk.yandex.com/i/_-OE02MQ2hy_1g
     На 768px не по макету:
@@ -15,7 +12,7 @@
 
 Отзывчивая вёрстка, которая корректно тянется на всех промежуточных разрешениях.
 
-    moviesCard, not-found, moviesCard__title, moviesCard: 
+    moviesCard, moviesCard__title,
 
     все фиксации высоты для текстовых элементов и блоков с динамическим (меняющимся) контентом нужно удалить. 
     Высота блоков "строится" из контента + их отступов. Если блок декоративный, то верно фиксировать его min-height
